layout issues mainly

--- a/custom-editor-style.css
+++ b/custom-editor-style.css
@@ -11,11 +11,14 @@ body#tinymce.wp-editor a {
 }
 
 body#tinymce.wp-editor hr {
-	display: block;
-	width: 130px;
-	height: 8px;
-	background: #bc2327;
-	margin-left: 0;
+		display: block;
+		width: 130px;
+		height: 8px;
+		background: #bc2327;
+		margin-left: 0;
+		margin-right: auto;
+		text-align: left;
+		border-style: none;
 }	
 
 body#tinymce.wp-editor.redline {
